--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-  "name": "react-webpack-cli",
-  "version": "1.0.0",
-  "description": "react+webpack的脚手架",
-  "main": "index.js",
-  "scripts": {
-    "dev": "webpack-dev-server --hot --inline --open",
-    "build": "webpack -p"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "react-app-test",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "antd": "^2.12.2",
-    "jquery": "^3.3.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router": "^4.2.0"
+    "axios": "^0.19.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-scripts": "3.2.0"
+  },
+  "scripts": {
+    "eslint": "eslint --ext .js --ext .jsx src",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babelify": "^7.3.0",
-    "css-loader": "^0.28.4",
-    "style-loader": "^0.18.2",
-    "file-loader": "^1.1.6",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "eslint": "^6.6.0"
   }
 }
